--- a/frontend/src/app/app.html
+++ b/frontend/src/app/app.html
@@ -1,3 +1,3 @@
-<div id="main-container" class="h-dvh overflow-auto p-3">
+<div id="main-container" class="h-dvh overflow-auto p-3 bg-primary-50">
     <router-outlet />
 </div>
