--- a/frontend/src/app/sesion/sesion.html
+++ b/frontend/src/app/sesion/sesion.html
@@ -1,14 +1,14 @@
-<div class="w-full h-full flex flex-col gap-2">
+<div class="w-full h-full flex flex-col gap-2 bg-primary-50">
     <p-toolbar [style]="{ 'padding': '0' }">
         <ng-template #start>
-            <p-button icon="pi pi-stopwatch" label="52" severity="success" variant="text"/>
+            <p-button icon="pi pi-bars" text severity="contrast" (click)="visible = true" />
         </ng-template>
         <ng-template #center>
-            Perico de los Palotes - Sesion: 4
+            <p-button icon="pi pi-folder-open" text severity="help" label="Perico de los Palotes - Sesión 4" />
+            <p-button icon="pi pi-stopwatch" label="52'" severity="success" variant="text" />
         </ng-template>
         <ng-template #end>
-            <p-button icon="pi pi-folder" text severity="help" />
-            <p-button icon="pi pi-history" text severity="warn" />
+            <p-button icon="pi pi-sign-out" text severity="danger" />
             <!-- <p-splitbutton label="Save" [model]="items" /> -->
         </ng-template>
     </p-toolbar>
@@ -22,14 +22,52 @@
             <p-button icon="pi pi-history" [outlined]="true" severity="warn" />
         </div>
     </div> -->
+    <p-drawer [(visible)]="visible" header="Opciones">
+        <h3 class="pi pi-history text-orange-700"> Ver Historial</h3>
+        <ul>
+            <li class="ml-2">Sesión 3: Rueda Vida</li>
+            <li class="ml-2"><a href="#">Resumen 2: Objetivo sesion 2</a></li>
+            <li class="ml-2">Sesión 2: Objetivo sesion 2</li>
+            <li class="ml-2">Resumen 1: Objetivo sesion 1</li>
+            <li class="ml-2">Sesión 1: Objetivo sesion 1</li>
+        </ul>
+        <p-divider />
+        <h4 class="pi pi-wrench text-blue-700"> Herramientas</h4>
+        <ul>
+            <li class="ml-2"><a href="#">Resumen 2: Objetivo sesion 2</a></li>
+            <li class="ml-2">Sesión 2: Objetivo sesion 2</li>
+            <li class="ml-2">Resumen 1: Objetivo sesion 1</li>
+            <li class="ml-2">Sesión 1: Objetivo sesion 1</li>
+        </ul>
+        <ng-template #footer>
+            <div class="flex items-center gap-2">
+                <button pButton label="Terminar Sesión" icon="pi pi-sign-out" class="w-full" severity="danger" outlined> </button>
+            </div>
+        </ng-template>        
+    </p-drawer>
     <div class="w-full">
-        <label for="goal" class="block mb-1">Objetivo</label>
+        <p-popover #op>
+            <ng-template #content>
+                <h4 class="font-medium pb-1">Definición de Objetivo</h4>
+                <ul class="list-inside list-disc">
+                    <li>M - Medible</li>
+                    <li>A - Alcanzable</li>
+                    <li>R - Realista</li>
+                    <li>T - Definido en el Tiempo</li>
+                    <li>E - Específico</li>
+                    <li>S - Satisfactorio</li>
+                </ul>
+            </ng-template>
+        </p-popover>
+        <label for="goal" class="block mb-1 font-medium">Objetivo <p-button icon="pi pi-info-circle" text
+                severity="info" [size]="'small'" (click)="op.toggle($event)" /></label>
         <input pInputText id="goal"
             class="w-full bg-surface-100 px-4 border border-surface rounded-border focus:outline-none focus:border-primary"
             value="Decidir siguiente paso">
         <div class="w-full flex flex-col">
         </div>
-        <label for="details" class="block mb-1">Desarrollo de la sesión</label>
+        <label for="details" class="block mb-1 font-medium">Desarrollo de la sesión <p-button icon="pi pi-info-circle"
+                text severity="info" [size]="'small'" /></label>
         <p-table [value]="detailOptions()" selectionMode="single" [(selection)]="selectedDetail" dataKey="id"
             scrollHeight="flex" class="bg-surface-100 border border-surface rounded-border" id="details"
             [size]="'small'">
@@ -42,7 +80,8 @@
         </p-table>
     </div>
     <div class="w-full">
-        <label for="tasks" class="block mb-1">Tareas para la siguiente</label>
+        <label for="tasks" class="block mb-1 font-medium">Tareas para la siguiente <p-button icon="pi pi-info-circle"
+                text severity="info" [size]="'small'" /></label>
         <!-- <p-listbox [options]="taskOptions()" [ngModel]="selectedTask()" optionLabel="name" id="tasks" class="w-full">
         </p-listbox> -->
         <p-table [value]="taskOptions()" selectionMode="single" [(selection)]="selectedTask" dataKey="id"
@@ -57,7 +96,8 @@
         </p-table>
     </div>
     <div class="w-full mt-auto">
-        <label for="input" class="block mb-1">Introducir datos</label>
+        <label for="input" class="block mb-1 font-medium">Introducir datos <p-button icon="pi pi-info-circle" text
+                severity="info" [size]="'small'" /></label>
         <div class="flex flex-row justify-between">
             <p-selectbutton [options]="stateOptions" [ngModel]="value" optionLabel="label" optionValue="value"
                 aria-labelledby="basic" />
@@ -68,7 +108,7 @@
             </div>
         </div>
         <div class="w-full mt-auto flex flex-row gap-2 items-center">
-            <textarea id="input" rows="2" pTextarea class="w-full">Escribiendo texto...</textarea>
+            <textarea id="input" rows="2" pTextarea class="w-full" placeholder="Escribe aquí"></textarea>
             <p-button icon="pi pi-send" [size]="'large'"></p-button>
         </div>
     </div>
