--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -3,8 +3,21 @@
 @plugin "tailwindcss-primeui";
 @import "primeicons/primeicons.css";
 
-:root {
+/* :root {
   --primary-color: #0066ff;
   --surface-border-radius: 8px;
   --text-color: #1a202c;
+} */
+
+/* h1 {
+    font-size: 2rem;
 }
+h2 {
+    font-size: 1.7rem;
+}
+h3 {
+    font-size: 1.4rem;
+}
+h4 {
+    font-size: 1.2rem;
+} */
