feat: added tools in lateral menu

--- a/frontend/src/app/sesion/sesion.html
+++ b/frontend/src/app/sesion/sesion.html
@@ -34,11 +34,21 @@
         <p-divider />
         <h4 class="pi pi-wrench text-blue-700"> Herramientas</h4>
         <ul>
-            <li class="ml-2"><a href="#">Resumen 2: Objetivo sesion 2</a></li>
-            <li class="ml-2">Sesión 2: Objetivo sesion 2</li>
-            <li class="ml-2">Resumen 1: Objetivo sesion 1</li>
-            <li class="ml-2">Sesión 1: Objetivo sesion 1</li>
+            <li class="ml-2">Rueda de la Vida</li>
+            <li class="ml-2">Valores</li>
+            <li class="ml-2">Semana Ideal</li>
+            <li class="ml-2">Test de Colores</li>
+            <li class="ml-2">Ficha Objetivo</li>
         </ul>
+        <p-divider />
+        <h4 class="pi pi-graduation-cap text-green-700"> Píldoras Formativas</h4>
+        <ul>
+            <li class="ml-2">Emociones Básicas</li>
+            <li class="ml-2">Camino Autoestima</li>
+            <li class="ml-2">REA</li>
+        </ul>
+        <p-divider />
+        <p-button class="w-full" icon="pi pi-pencil" text label="Pizarra"/>
         <ng-template #footer>
             <div class="flex items-center gap-2">
                 <button pButton label="Terminar Sesión" icon="pi pi-sign-out" class="w-full" severity="danger" outlined> </button>
