feat: top position for previous notes. Added goals to notes

--- a/frontend/src/app/sesion/sesion.html
+++ b/frontend/src/app/sesion/sesion.html
@@ -24,11 +24,11 @@
                 <span>Buscar mejoras en el diseño</span>
             </div>
             <div class="py-1 flex flex-col">
-                <span class="font-medium">Siguientes Objetivos pactados:</span>
-                <ul class="list-inside list-disc">
-                    <li>Objetivo 1</li>
-                    <li>Objetivo 2</li>
-                    <li>Objetivo 2</li>
+                <span class="font-medium">Objetivos pactados:</span>
+                <ul class="list-inside list-none">
+                    <li><i class="pi pi-check-square pr-2"></i>Objetivo 1</li>
+                    <li><i class="pi pi-stop pr-2"></i>Objetivo 2</li>
+                    <li><i class="pi pi-stop pr-2"></i>Objetivo 3</li>
                 </ul>
             </div>
             <div class="py-1 flex flex-col">
@@ -40,6 +40,19 @@
                 </p>
             </div>
             <div class="py-1 flex flex-col">
+                <span class="font-medium">Planes de acción pendientes:</span>
+                <ul class="list-inside list-disc">
+                    <li>10/10 07/10 15:00 Reunión nuevo diseño</li>
+                    <li>10/10 08/10 23:59 Decidir qué diseño nuevo se hace</li>
+                </ul>
+            </div>
+            <div class="py-1 flex flex-col">
+                <span class="font-medium">Etiquetas:</span>
+                <ul class="list-inside list-disc">
+                    <li>Ansioso, agotado, nervioso</li>
+                    <li>Dinero, compromiso</li>
+                </ul>
+            </div>            <div class="py-1 flex flex-col">
                 <span class="font-medium">Ideas:</span>
                 <ul class="list-inside list-disc">
                     <li>Idea 1</li>
