feat: added summary page

--- a/frontend/src/app/login/login.html
+++ b/frontend/src/app/login/login.html
@@ -35,7 +35,7 @@
 
     <div class="mt-6 text-sm text-center text-muted-color">
       ¿No tienes cuenta?
-      <a href="sesion" class="text-primary font-medium hover:underline">Regístrate</a>
+      <a href="session" class="text-primary font-medium hover:underline">Regístrate</a>
     </div>
   </div>
 </div>
