feat: added initial design to summary

--- a/frontend/src/app/session/session.html
+++ b/frontend/src/app/session/session.html
@@ -4,7 +4,7 @@
             <p-button icon="pi pi-bars" text severity="contrast" (click)="visible = true" />
         </ng-template>
         <ng-template #center>
-            <p-button icon="pi pi-folder-open" text severity="help" label="Perico de los Palotes - Sesión 4"
+            <p-button icon="pi pi-folder-open" text severity="help" label="Pedro Pérez - Sesión 4"
                 (click)="showDialogNotes()" />
             <p-button icon="pi pi-stopwatch" label="52'" severity="success" variant="text" />
         </ng-template>
