feat: added fullscreen service

--- a/frontend/src/app/summary/summary.html
+++ b/frontend/src/app/summary/summary.html
@@ -7,7 +7,8 @@
             <p-button icon="pi pi-folder-open" text severity="help" label="Pedro Pérez - Resumen 4" />
         </ng-template>
         <ng-template #end>
-            <p-button icon="pi pi-sign-out" text severity="danger" />
+            <p-button icon="pi pi-window-maximize" text severity="info" (onClick)="toggleFullScreen()"/>
+            <p-button icon="pi pi-sign-out" text severity="danger"  (onClick)="goSession()"/>
         </ng-template>
     </p-toolbar>
     <p-panel [toggleable]="true">
