--- a/frontend/src/app/session/session.html
+++ b/frontend/src/app/session/session.html
@@ -9,6 +9,7 @@
             <p-button icon="pi pi-stopwatch" label="52'" severity="success" variant="text" />
         </ng-template>
         <ng-template #end>
+            <p-button icon="pi pi-window-maximize" text severity="info" (onClick)="toggleFullScreen()"/>
             <p-button icon="pi pi-sign-out" text severity="danger" (onClick)="goSummary()"/>
         </ng-template>
     </p-toolbar>
