--- a/frontend/src/app/session/session.html
+++ b/frontend/src/app/session/session.html
@@ -118,7 +118,7 @@
         <label for="goal" class="block mb-1 font-medium">Objetivo <p-button icon="pi pi-info-circle" text
                 severity="info" [size]="'small'" (click)="op.toggle($event)" /></label>
         <input pInputText id="goal"
-            class="w-full bg-surface-100 px-4 border border-surface rounded-border focus:outline-none focus:border-primary"
+            class="w-full"
             value="Decidir siguiente paso">
         <!-- <p-fieldset>
             <ng-template #header>
