--- a/frontend/src/app/summary/summary.html
+++ b/frontend/src/app/summary/summary.html
@@ -4,13 +4,47 @@
             <p-button icon="pi pi-bars" text severity="contrast" />
         </ng-template>
         <ng-template #center>
-            <p-button icon="pi pi-folder-open" text severity="help" label="Pedro Pérez - Resumen 4" />
+            <p-button icon="pi pi-id-card" text severity="help" label="Pedro Pérez - Resumen 4" (onClick)="showDialogProfile()"/>
         </ng-template>
         <ng-template #end>
-            <p-button icon="pi pi-window-maximize" text severity="info" (onClick)="toggleFullScreen()"/>
-            <p-button icon="pi pi-sign-out" text severity="danger"  (onClick)="goSession()"/>
+            <p-button icon="pi pi-window-maximize" text severity="info" (onClick)="toggleFullScreen()" />
+            <p-button icon="pi pi-sign-out" text severity="danger" (onClick)="goSession()" />
         </ng-template>
     </p-toolbar>
+
+    <p-dialog header="Perfil Coachee" [(visible)]="visibleProfile" [position]="'top'" [style]="{ width: '45rem' }">
+        <div class="flex flex-col">
+            <div class="py-1 grid grid-cols-3">
+                <span class="font-medium">Nombre Completo:</span>
+                <span class="col-span-2">Pedro Pérez Gómez</span>
+                <span class="font-medium">Tipo Proceso:</span>
+                <span class="col-span-2">Directivo Ejecutivo</span>
+                <span class="font-medium">Buenas Obras:</span>
+                <span class="col-span-2">No</span>
+                <span class="font-medium">Empresa:</span>
+                <span class="col-span-2">Soluciones Para Todo SL</span>
+                <span class="font-medium">Cargo:</span>
+                <span class="col-span-2">CEO</span>
+            </div>
+            <div class="py-1 flex flex-col">
+                <span class="font-medium">Objetivo Proceso:</span>
+                <span>Conseguir aumentar las ventas un 30% el 31/01/2026</span>
+            </div>
+            <div class="py-1 flex flex-col">
+                <span class="font-medium">Objetivos pactados:</span>
+                <ul class="list-inside list-none">
+                    <li><i class="pi pi-check-square pr-2"></i>Objetivo 1</li>
+                    <li><i class="pi pi-stop pr-2"></i>Objetivo 2</li>
+                    <li><i class="pi pi-stop pr-2"></i>Objetivo 3</li>
+                </ul>
+            </div>
+        </div>
+
+        <div class="flex justify-end gap-2">
+            <p-button label="Cerrar" (click)="visibleProfile = false" />
+        </div>
+    </p-dialog>
+
     <p-panel [toggleable]="true">
         <ng-template #header>
             <span class="font-medium">Datos de Sesión</span>
@@ -54,14 +88,17 @@
         </ng-template>
     </p-panel>
     <p-panel header="Resumen Central">
-        Duda si entregar o no el proyecto. Finalmente decide diseñar el producto, aunque no cuenta con un diseñador ni
-        sabe dónde encontrar uno ni cuánto costaría. Considera buscar un diseñador por internet, aunque también evalúa
+        Duda si entregar o no el proyecto. Finalmente decide diseñar el producto, aunque no cuenta con un diseñador
+        ni
+        sabe dónde encontrar uno ni cuánto costaría. Considera buscar un diseñador por internet, aunque también
+        evalúa
         hacer el diseño por su cuenta. Planea calcular el presupuesto y buscar un diseñador durante esta semana.
         <ng-template #icons>
             <p-button icon="pi pi-microchip-ai" text severity="info" />
         </ng-template>
     </p-panel>
     <p-panel header="Aprendizaje Coachee">
+        <input pInputText id="goal" class="w-full" value="Decidir siguiente paso">
     </p-panel>
     <p-panel header="Conclusiones">
     </p-panel>
