--- a/frontend/src/app/session/session.html
+++ b/frontend/src/app/session/session.html
@@ -4,13 +4,13 @@
             <p-button icon="pi pi-bars" text severity="contrast" (click)="visible = true" />
         </ng-template>
         <ng-template #center>
-            <p-button icon="pi pi-folder-open" text severity="help" label="Pedro Pérez - Sesión 4"
+            <p-button icon="pi pi-folder-open" text severity="warn" label="Pedro Pérez - Sesión 4"
                 (click)="showDialogNotes()" />
             <p-button icon="pi pi-stopwatch" label="52'" severity="success" variant="text" />
         </ng-template>
         <ng-template #end>
             <p-button icon="pi pi-window-maximize" text severity="info" (onClick)="toggleFullScreen()"/>
-            <p-button icon="pi pi-sign-out" text severity="danger" (onClick)="goSummary()"/>
+            <p-button icon="pi pi-sign-out" text severity="danger" (onClick)="goCoachees()"/>
         </ng-template>
     </p-toolbar>
     <p-dialog header="Notas Previas" [(visible)]="visibleNotes" [position]="'top'" [style]="{ width: '45rem' }">
@@ -26,9 +26,9 @@
             <div class="py-1 flex flex-col">
                 <span class="font-medium">Objetivos pactados:</span>
                 <ul class="list-inside list-none">
-                    <li><i class="pi pi-check-square pr-2"></i>Objetivo 1</li>
-                    <li><i class="pi pi-stop pr-2"></i>Objetivo 2</li>
-                    <li><i class="pi pi-stop pr-2"></i>Objetivo 3</li>
+                    <li><i class="pi pi-check-square pr-2"></i>Mejorar flujo de datos interno</li>
+                    <li><i class="pi pi-stop pr-2"></i>Lanzar nuevo producto</li>
+                    <li><i class="pi pi-stop pr-2"></i>Conseguir ventas por 100k</li>
                 </ul>
             </div>
             <div class="py-1 flex flex-col">
@@ -132,7 +132,7 @@
         <label for="details" class="block mb-1 font-medium">Desarrollo de la sesión <p-button icon="pi pi-info-circle"
                 text severity="info" [size]="'small'" /></label>
         <p-table [value]="detailOptions()" selectionMode="single" [(selection)]="selectedDetail" dataKey="id"
-            scrollHeight="flex" class="bg-surface-100 border border-surface rounded-border" id="details"
+            scrollHeight="flex" id="details"
             [size]="'small'" disabled>
             <ng-template pTemplate="body" let-detail>
                 <tr [pSelectableRow]="detail">
@@ -164,7 +164,7 @@
         <label for="tasks" class="block mb-1 font-medium">Tareas para la siguiente <p-button icon="pi pi-info-circle"
                 text severity="info" [size]="'small'" /></label>
         <p-table [value]="taskOptions()" selectionMode="single" [(selection)]="selectedTask" dataKey="id"
-            scrollHeight="flex" class="bg-surface-100 border border-surface rounded-border" id="tasks" [size]="'small'">
+            scrollHeight="flex" id="tasks" [size]="'small'">
             <ng-template pTemplate="body" let-task>
                 <tr [pSelectableRow]="task">
                     <td>{{ task.text }}</td>
